testdata/bad/letbind.gol
let id = fn(id){id}(fn(x){x}) in {
 let id1 = id in {
  let _1 = id1(0), _2 = id1(false) in {0}
 }
}
